tests/ui/const-generics/fn-const-param-infer.min.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-infer.rs:6:25
   |
LL | struct Checked<const F: fn(usize) -> bool>;
   |                         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

